--- a/manifest.json
+++ b/manifest.json
@@ -27,14 +27,14 @@
         "default_popup": "popup.html",
         "default_title": "Auto Translate BuySellVouchers",
         "default_icon": {
-            "16": "icons.jpg",
-            "48": "icons.jpg",
-            "128": "icons.jpg"
+            "16": "icons.png",
+            "48": "icons.png",
+            "128": "icons.png"
         }
     },
     "icons": {
-        "16": "icons.jpg",
-        "48": "icons.jpg",
-        "128": "icons.jpg"
+        "16": "icons.png",
+        "48": "icons.png",
+        "128": "icons.png"
     }
 }
